--- a/app/src/main/res/layout/adapter_list.xml
+++ b/app/src/main/res/layout/adapter_list.xml
@@ -5,7 +5,7 @@
     android:orientation="horizontal">
 
     <TextView
-        android:id="@+id/textItem"
+        android:id="@+id/text_item"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_weight="1"
@@ -15,7 +15,7 @@
         android:textAppearance="@style/TextAppearance.Material3.BodyLarge"/>
 
     <ImageButton
-        android:id="@+id/buttonClose"
+        android:id="@+id/button_close"
         android:layout_width="24dp"
         android:layout_height="24dp"
         android:layout_margin="8dp"
