--- a/app/src/main/res/layout/fragment_calendar.xml
+++ b/app/src/main/res/layout/fragment_calendar.xml
@@ -12,14 +12,14 @@
     android:background="?attr/colorSurface">
 
         <com.google.android.material.appbar.CollapsingToolbarLayout
-            android:id="@+id/topAppBarLayout"
+            android:id="@+id/top_app_bar_layout"
             style="?attr/collapsingToolbarLayoutMediumStyle"
             android:layout_width="match_parent"
             android:background="?attr/colorSurface"
             android:layout_height="?attr/collapsingToolbarLayoutMediumSize">
 
             <com.google.android.material.appbar.MaterialToolbar
-                android:id="@+id/topAppBar"
+                android:id="@+id/top_app_bar"
                 android:layout_width="match_parent"
                 app:menu="@menu/calendar_menu"
                 android:background="?attr/colorSurface"
