--- a/app/src/main/res/layout/fragment_recipe.xml
+++ b/app/src/main/res/layout/fragment_recipe.xml
@@ -21,7 +21,7 @@
 
             <androidx.recyclerview.widget.RecyclerView
                 android:clipToPadding="false"
-                android:id="@+id/recyclerViewRecipe"
+                android:id="@+id/recycler_view_recipe"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content">
                 <!-- Screen content goes here. -->
@@ -43,19 +43,19 @@
     </com.google.android.material.appbar.AppBarLayout>
 
     <com.google.android.material.search.SearchView
-        android:id="@+id/searchView"
+        android:id="@+id/search_view"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         app:layout_anchor="@id/search_bar">
 
         <androidx.recyclerview.widget.RecyclerView
-            android:id="@+id/recyclerViewRecipeSearch"
+            android:id="@+id/recycler_view_recipe_search"
             android:layout_width="match_parent"
             android:layout_height="wrap_content" />
     </com.google.android.material.search.SearchView>
 
     <com.google.android.material.floatingactionbutton.FloatingActionButton
-        android:id="@+id/addButton"
+        android:id="@+id/add_button"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="bottom|end"
