--- a/app/src/main/res/menu/menu_groceries.xml
+++ b/app/src/main/res/menu/menu_groceries.xml
@@ -6,4 +6,8 @@
         android:title="@string/item_remove_check"
         android:icon="@drawable/ic_check_all"
         app:showAsAction="ifRoom" />
+    <item
+        android:id="@+id/item_remove_all"
+        android:title="@string/item_remove_all"
+        app:showAsAction="never" />
 </menu>
