--- a/app/src/main/res/layout/fragment_edit_recipe.xml
+++ b/app/src/main/res/layout/fragment_edit_recipe.xml
@@ -4,6 +4,7 @@
     android:orientation="vertical"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="?attr/colorSurface"
     android:padding="8dp">
 
     <LinearLayout
@@ -11,16 +12,32 @@
         android:layout_height="wrap_content"
         android:orientation="vertical" >
 
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content" >
 
-        <Button
-            android:layout_gravity="end"
-            style="@style/Widget.Material3.Button.TextButton"
-            android:id="@+id/edit_submit"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="@string/label_submit"
-            android:layout_margin="8dp"
-            />
+            <ImageButton
+                android:id="@+id/button_back"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_margin="8dp"
+                android:background="?selectableItemBackgroundBorderless"
+                android:src="@drawable/ic_back" />
+
+            <View
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_weight="1" />
+
+            <Button
+                android:id="@+id/edit_submit"
+                style="@style/Widget.Material3.Button.TextButton"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="end"
+                android:text="@string/label_submit" />
+
+        </LinearLayout>
 
         <com.google.android.material.textfield.TextInputLayout
             style="?attr/textInputFilledStyle"
