--- a/app/src/main/res/menu/recipe_menu.xml
+++ b/app/src/main/res/menu/recipe_menu.xml
@@ -1,11 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
-<menu xmlns:android="http://schemas.android.com/apk/res/android">
+<menu xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto">
     <item
-        android:id="@+id/item_edit"
-        android:title="@string/label_edit"
-        android:icon="@drawable/ic_edit" />
-    <item
-        android:id="@+id/item_delete"
-        android:title="@string/label_delete"
-        android:icon="@drawable/ic_delete" />
+        android:id="@+id/item_products"
+        android:title="@string/product"
+        android:icon="@drawable/ic_products"
+        app:showAsAction="ifRoom" />
 </menu>
