--- a/app/src/main/res/layout/fragment_recipe.xml
+++ b/app/src/main/res/layout/fragment_recipe.xml
@@ -36,11 +36,20 @@
 
         <com.google.android.material.search.SearchBar
             style="@style/Theme.Menu.SearchBar"
+            app:menu="@menu/recipe_menu"
             android:id="@+id/search_bar"
             android:hint="@string/item_search"
             android:layout_width="match_parent"
             android:layout_height="wrap_content" />
     </com.google.android.material.appbar.AppBarLayout>
+
+    <com.google.android.material.floatingactionbutton.FloatingActionButton
+        android:id="@+id/add_button"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="bottom|end"
+        android:layout_margin="16dp"
+        app:srcCompat="@drawable/ic_add" />
 
     <com.google.android.material.search.SearchView
         android:id="@+id/search_view"
@@ -53,13 +62,5 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content" />
     </com.google.android.material.search.SearchView>
-
-    <com.google.android.material.floatingactionbutton.FloatingActionButton
-        android:id="@+id/add_button"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_gravity="bottom|end"
-        android:layout_margin="16dp"
-        app:srcCompat="@drawable/ic_add" />
 
 </androidx.coordinatorlayout.widget.CoordinatorLayout>
